@@ -1,3 +1,7 @@
+2010-03-29 Homer Xing <homer.xing@gmail.com>
+
+    * Do not raise exception when GNOMEArtNG thumbnails cannot be downloaded.
+
 2010-03-28 Homer Xing <homer.xing@gmail.com>
 
     * Check DBus status when program start up.
